--- a/main.ipynb
+++ b/main.ipynb
@@ -10,21 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
-    "import numpy\n",
+    "import numpy as np\n",
     "import sklearn "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
