--- a/main.ipynb
+++ b/main.ipynb
@@ -42,18 +42,33 @@
     "class Energy:\n",
     "    def __init__(self):\n",
     "        self.graph = igraph.Graph()\n",
+    "        self.graph.add_vertices(2) # source vertex:0 terminal vertex:1\n",
     "        self.node_id = {}\n",
+    "        self.Econst = 0\n",
+    "        #igraph requires \"preprocessing\" to initialize edge with weights\n",
+    "        #see https://igraph.org/python/doc/tutorial/generation.html \"From nodes to edges\" for more detail\n",
+    "        self.vertex_num = 2\n",
+    "        self.edges = []\n",
+    "        self.capacity = []\n",
     "\n",
-    "    def get_node_id(self, assignment)->int: \n",
-    "        return 0\n",
+    "    def get_node_id(self, x)->int: \n",
+    "        return self.node_id[x]\n",
     "    \n",
-    "    def add_node(self, E0, E1)->int:\n",
-    "        return 0\n",
+    "    def add_node(self,x, E0, E1)->int:\n",
+    "        x_id = self.vertex_num\n",
+    "        self.node_id[x] = x_id\n",
+    "        self.vertex_num += 1\n",
+    "        self.addterm1(x, E0,E1)\n",
+    "        return x_id\n",
     "\n",
     "    def add_constant(self, E)->None:\n",
+    "        self.Econst += E\n",
     "        return\n",
     "\n",
     "    def add_term1(self, x, E0, E1)->None:\n",
+    "        x_id = self.node_id[x]\n",
+    "        self.edges.append([0,x_id], [x_id,1])\n",
+    "        self.capacity.append([E1], [E0])\n",
     "        return\n",
     "    \n",
     "    def add_term2(self, x, y, E00, E01, E10, E11)->None:\n",
