implemented smoothness_value function

--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,8 @@
     "import numpy as np\n",
     "import sklearn \n",
     "import igraph\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import math"
    ]
   },
   {
@@ -222,8 +223,18 @@
     "        elif self.is_active_assignment(a):\n",
     "            self.energy.add_node(a, Dp, 0)\n",
     "\n",
+    "    def smoothness_value(self, a1, a2, lam):\n",
+    "        p1 = self.limg(a1[0])\n",
+    "        p2 = self.limg(a2[0])\n",
+    "        q1 = self.limg(a1[1])\n",
+    "        q2 = self.limg(a2[1])\n",
+    "        if(max(math.abs(p1-p2), math.abs(q1-q2))<8):\n",
+    "            return 3*lam\n",
+    "        else:\n",
+    "            return lam\n",
     "        \n",
-    "    \n"
+    "    def build_smoothness_value(self,):\n",
+    "        return\n"
    ]
   },
   {
