--- a/main.ipynb
+++ b/main.ipynb
@@ -31,8 +31,6 @@
     "class Energy:\n",
     "    def __init__(self):\n",
     "        self.graph = None\n",
-    "        self.a_to_id = {}\n",
-    "        self.id_to_a = ['source', 'sink']\n",
     "        self.Econst = 0\n",
     "        self.Gconst = 0\n",
     "        #igraph requires \"preprocessing\" to initialize edge with weights\n",
@@ -41,14 +39,11 @@
     "        self.edges = []\n",
     "        self.capacity = []\n",
     "\n",
-    "    def get_node_id(self, x)->int: \n",
-    "        return self.a_to_id[x]\n",
+    "    # TODO: function to recover vertex separation from graph cut\n",
     "    \n",
     "    # Add a new binary variable as a node\n",
-    "    def add_node(self, x, E0=0, E1=0)->int:\n",
+    "    def add_node(self, E0=0, E1=0)->int:\n",
     "        x_id = self.vertex_num\n",
-    "        self.a_to_id[x] = x_id\n",
-    "        self.id_to_a.append(x)\n",
     "        self.vertex_num += 1\n",
     "        self.add_term1(x_id, E0,E1)\n",
     "        return x_id\n",
@@ -175,21 +170,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "OCCLUDED = -1\n",
+    "VAR_ALPHA = 1\n",
+    "VAR_ABSENT = 0\n",
+    "\n",
     "class Solver:\n",
-    "    def __init__(self, limg, rimg, windowsize,initial_f, maxdisparity, d=2, cutoff=30, ):\n",
+    "    def __init__(self, limg, rimg, windowsize, initial_f, maxdisparity, d=2, cutoff=30, ):\n",
     "        self.limg = limg\n",
     "        self.rimg = rimg\n",
+    "        # windowsize * 2 + 1 = full window length\n",
     "        self.windowsize = windowsize #windowsize in data term\n",
+    "        # configuration\n",
+    "        # f is 3d array\n",
+    "        # f = [p_row, p_col, p_disparity]\n",
     "        self.f = initial_f\n",
+    "        # disparity matching window along the rectified image rows\n",
     "        self.maxdisparity = maxdisparity\n",
+    "        # Graph representation of energy function\n",
     "        self.energy = Energy()\n",
     "        self.d=d #d-norm in data term\n",
     "        self.cutoff=cutoff #cutoff value of abs difference in data term\n",
+    "        # arrays index by pixel p to track the nodes associated to each pixel\n",
+    "        self.varsA = np.zeros_like(self.limg)\n",
+    "        self.vars0 = np.zeros_like(self.limg)\n",
     "\n",
     "        self.limg_padded = np.pad(self.limg, windowsize, mode=\"reflect\").astype(int)\n",
     "        self.rimg_padded = np.pad(self.rimg, windowsize, mode=\"reflect\").astype(int)\n",
     "\n",
     "    def disparity(self, a):\n",
+    "        # assignment a - (p, q)\n",
     "        p, q = a\n",
     "        return q[1] - p[1]\n",
     "    \n",
@@ -211,6 +220,7 @@
     "\n",
     "    def build_node_with_data_occulsion(self, a, alpha):\n",
     "        d = self.disparity(a)\n",
+    "        # TODO: change hard-code K\n",
     "        Dp = self.data_occlusion_value(a, 0)\n",
     "        if d == alpha:\n",
     "            # a in A_alpha and is active remains active\n",
@@ -224,16 +234,17 @@
     "            self.energy.add_node(a, Dp, 0)\n",
     "\n",
     "    def smoothness_value(self, a1, a2, lam):\n",
-    "        p1 = self.limg(a1[0])\n",
-    "        p2 = self.limg(a2[0])\n",
-    "        q1 = self.limg(a1[1])\n",
-    "        q2 = self.limg(a2[1])\n",
+    "        p1 = self.limg[a1[0]]\n",
+    "        p2 = self.limg[a2[0]]\n",
+    "        q1 = self.limg[a1[1]]\n",
+    "        q2 = self.limg[a2[1]]\n",
     "        if(max(math.abs(p1-p2), math.abs(q1-q2))<8):\n",
     "            return 3*lam\n",
     "        else:\n",
     "            return lam\n",
     "        \n",
     "    def build_smoothness_value(self,):\n",
+    "        \n",
     "        return\n"
    ]
   },
