--- a/main.ipynb
+++ b/main.ipynb
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,8 @@
     "        # configuration\n",
     "        # f is 3d array\n",
     "        # f = [p_row, p_col, p_disparity]\n",
-    "        self.f = initial_f\n",
+    "        self.d_left = initial_f[0]\n",
+    "        self.d_right = initial_f[1]\n",
     "        # disparity matching window along the rectified image rows\n",
     "        self.maxdisparity = maxdisparity\n",
     "        # Graph representation of energy function\n",
@@ -197,17 +198,17 @@
     "        self.limg_padded = np.pad(self.limg, windowsize, mode=\"reflect\").astype(int)\n",
     "        self.rimg_padded = np.pad(self.rimg, windowsize, mode=\"reflect\").astype(int)\n",
     "\n",
-    "    def disparity(self, a):\n",
+    "    def disparity(self, asn):\n",
     "        # assignment a - (p, q)\n",
-    "        p, q = a\n",
+    "        p, q = asn\n",
     "        return q[1] - p[1]\n",
     "    \n",
     "    def is_active_assignment(self, a):\n",
     "        return self.f[a[0][0], a[0][1], a[0][1] - a[1][1]]\n",
     "\n",
     "    #data + occulsion\n",
-    "    def data_occlusion_value(self, a, K):\n",
-    "        p,q = a\n",
+    "    def data_occlusion_value(self, asn, K):\n",
+    "        p,q = asn\n",
     "        lwindow = self.limg_padded[ p[0]:p[0]+2*self.windowsize+1,\n",
     "                                    p[1]:p[1]+2*self.windowsize+1]\n",
     "        rwindow = self.rimg_padded[ q[0]:q[0]+2*self.windowsize+1,\n",
@@ -218,20 +219,42 @@
     "        return E_data - K\n",
     "    \n",
     "\n",
-    "    def build_node_with_data_occulsion(self, a, alpha):\n",
-    "        d = self.disparity(a)\n",
+    "    def build_node_with_data_occulsion(self, p, alpha):\n",
+    "        '''\n",
+    "        creates appropriate nodes and adds them to varsA and vars0\n",
+    "        p: pixel in the left image\n",
+    "        alpha: alpha-expansion disparity value\n",
+    "        '''\n",
+    "        d = self.d_left[p]\n",
     "        # TODO: change hard-code K\n",
-    "        Dp = self.data_occlusion_value(a, 0)\n",
     "        if d == alpha:\n",
     "            # a in A_alpha and is active remains active\n",
-    "            if self.is_active_assignment(a):\n",
-    "                self.energy.add_constant(Dp)\n",
+    "            asn = (p, (p[0], p[1]+d))\n",
+    "            Dp = self.data_occlusion_value(asn, 0)\n",
+    "            self.energy.add_constant(Dp)\n",
+    "            self.varsA[p] = VAR_ALPHA\n",
+    "            self.vars0[p] = VAR_ALPHA\n",
     "            #a in A_alpha and is inative changes depending on g\n",
+    "        else:\n",
+    "            if p[1]+alpha<self.limg.shape[1]:\n",
+    "                # p has inactive assignnent with disparity = alpha\n",
+    "                asn = (p, (p[0], p[1]+alpha))\n",
+    "                Dp = self.data_occlusion_value(asn, 0)\n",
+    "                a = self.energy.add_node(0, Dp)\n",
+    "                self.varsA[p] = a\n",
     "            else:\n",
-    "                self.energy.add_node(a, 0, Dp)\n",
-    "        # a is not in A_alpha but is active\n",
-    "        elif self.is_active_assignment(a):\n",
-    "            self.energy.add_node(a, Dp, 0)\n",
+    "                # p+alpha is not in right image\n",
+    "                self.varsA[p] = VAR_ABSENT\n",
+    "            \n",
+    "            if d != OCCLUDED:\n",
+    "                # p has active assignemnt with disparity not= alpha\n",
+    "                asn = (p, (p[0], p[1]+d))\n",
+    "                Dp = self.data_occlusion_value(asn, 0)\n",
+    "                o = self.energy.add_node(Dp, 0)\n",
+    "                self.vars0[p] = o\n",
+    "            else:\n",
+    "                # p has no active assignment\n",
+    "                self.vars0[p] = VAR_ABSENT\n",
     "\n",
     "    def smoothness_value(self, a1, a2, lam):\n",
     "        p1 = self.limg[a1[0]]\n",
