Implemented build_smoothness

--- a/main.ipynb
+++ b/main.ipynb
@@ -256,18 +256,71 @@
     "                # p has no active assignment\n",
     "                self.vars0[p] = VAR_ABSENT\n",
     "\n",
-    "    def smoothness_value(self, a1, a2, lam):\n",
-    "        p1 = self.limg[a1[0]]\n",
-    "        p2 = self.limg[a2[0]]\n",
-    "        q1 = self.limg[a1[1]]\n",
-    "        q2 = self.limg[a2[1]]\n",
+    "    def smoothness_value(self, asn1, asn2, lam):\n",
+    "        p1 = self.limg[asn1[0]]\n",
+    "        p2 = self.limg[asn2[0]]\n",
+    "        q1 = self.limg[asn1[1]]\n",
+    "        q2 = self.limg[asn2[1]]\n",
     "        if(max(math.abs(p1-p2), math.abs(q1-q2))<8):\n",
     "            return 3*lam\n",
     "        else:\n",
     "            return lam\n",
     "        \n",
-    "    def build_smoothness_value(self,):\n",
+    "    def build_smoothness(self, p1, p2, alpha):\n",
+    "        # TODO: change hard-code lam\n",
+    "        lam = 1\n",
+    "\n",
+    "        def IS_VAR(var):\n",
+    "            return var>1 # 0: absent 1: alpha\n",
+    "\n",
+    "        a1 = self.varsA[p1]\n",
+    "        a2 = self.varsA[p2]\n",
+    "        o1 = self.vars0[p1]\n",
+    "        o2 = self.vars0[p2]\n",
+    "        d1 = self.d_left[p1]\n",
+    "        d2 = self.d_left[p2]\n",
+    "\n",
+    "        # by the definition of the smoothness term, we only care about p1 and p2 if they are adjacent\n",
+    "        # pixel. The assignments concerning p1 and p2 should have the same disparity, since the al-\n",
+    "        # -pha expansion move only changes inactive assignment with disp=alpha and active assignment\n",
+    "        # with disp!=alpha, we only concern ourselves with assignment disp=alpha and disp= active-ass-\n",
+    "        # ignment_of(p1, p2)\n",
+    "\n",
+    "        #disp = alpha\n",
+    "        if(self.varsA[p1]!=VAR_ABSENT and self.varsA[p2]!=VAR_ABSENT):\n",
+    "            # both p1 and p2 has assignment with disp=alpha in rimg\n",
+    "            # at least one of p1 and p2 has inactive assignment with disp=alpha\n",
+    "            asn1 = (p1, (p1[0], p1[1]+alpha))\n",
+    "            asn2 = (p2, (p2[0], p2[1]+alpha))\n",
+    "            V = self.smoothness_value(asn1, asn2, lam)\n",
+    "            if(a1!=VAR_ALPHA and a2!=VAR_ALPHA):\n",
+    "                self.energy.add_term2(a1,a2,0,V,V,0)\n",
+    "            elif(a1!=VAR_ALPHA and a2==VAR_ALPHA):\n",
+    "                self.energy.add_term1(a1,V,0)\n",
+    "            elif(a1==VAR_ALPHA and a2!=VAR_ALPHA):\n",
+    "                self.energy.add_term1(a2,V,0)\n",
+    "\n",
+    "        #disp= active-assignment_of(p1)=active-assignment_of(p2)\n",
+    "        if(d1==d2 and IS_VAR(o1) and IS_VAR(o2)):\n",
+    "            asn1 = (p1, (p1[0], p1[1]+d1))\n",
+    "            asn2 = (p2, (p2[0], p2[1]+d2))\n",
+    "            V = self.smoothness_value(asn1, asn2, lam)\n",
+    "            self.energy.add_term2(o1, o2, 0, V, V, 0)\n",
+    "\n",
+    "        #disp= active-assignment_of(p1)!=active-assignment_of(p2)\n",
+    "        if(d1!=d2 and IS_VAR(o1) and p2[1]+d1<self.limg.shape[1]):\n",
+    "            asn1 = (p1, (p1[0], p1[1]+d1))\n",
+    "            asn2 = (p2, (p2[0], p2[1]+d1))\n",
+    "            V = self.smoothness_value(asn1, asn2, lam)\n",
+    "            self.energy.add_term1(o1, V, 0)\n",
     "        \n",
+    "        #disp= active-assignment_of(p2)!=active-assignment_of(p1)\n",
+    "        if(d2!=d1 and IS_VAR(o2) and p1[1]+d2<self.limg.shape[1]):\n",
+    "            asn1 = (p1, (p1[0], p1[1]+d2))\n",
+    "            asn2 = (p2, (p2[0], p2[1]+d2))\n",
+    "            V = self.smoothness_value(asn1, asn2, lam)\n",
+    "            self.energy.add_term1(o2, V, 0)\n",
+    "            \n",
     "        return\n"
    ]
   },
