changed K to be a variable

--- a/main.ipynb
+++ b/main.ipynb
@@ -227,10 +227,11 @@
     "        '''\n",
     "        d = self.d_left[p]\n",
     "        # TODO: change hard-code K\n",
+    "        K = 0\n",
     "        if d == alpha:\n",
     "            # a in A_alpha and is active remains active\n",
     "            asn = (p, (p[0], p[1]+d))\n",
-    "            Dp = self.data_occlusion_value(asn, 0)\n",
+    "            Dp = self.data_occlusion_value(asn, K)\n",
     "            self.energy.add_constant(Dp)\n",
     "            self.varsA[p] = VAR_ALPHA\n",
     "            self.vars0[p] = VAR_ALPHA\n",
@@ -239,7 +240,7 @@
     "            if p[1]+alpha<self.limg.shape[1]:\n",
     "                # p has inactive assignnent with disparity = alpha\n",
     "                asn = (p, (p[0], p[1]+alpha))\n",
-    "                Dp = self.data_occlusion_value(asn, 0)\n",
+    "                Dp = self.data_occlusion_value(asn, K)\n",
     "                a = self.energy.add_node(0, Dp)\n",
     "                self.varsA[p] = a\n",
     "            else:\n",
@@ -249,7 +250,7 @@
     "            if d != OCCLUDED:\n",
     "                # p has active assignemnt with disparity not= alpha\n",
     "                asn = (p, (p[0], p[1]+d))\n",
-    "                Dp = self.data_occlusion_value(asn, 0)\n",
+    "                Dp = self.data_occlusion_value(asn, K)\n",
     "                o = self.energy.add_node(Dp, 0)\n",
     "                self.vars0[p] = o\n",
     "            else:\n",
