--- a/main.ipynb
+++ b/main.ipynb
@@ -174,6 +174,9 @@
     "VAR_ALPHA = 1\n",
     "VAR_ABSENT = 0\n",
     "\n",
+    "def IS_VAR(var):\n",
+    "    return var>1 # 0: absent 1: alpha\n",
+    "\n",
     "class Solver:\n",
     "    def __init__(self, limg, rimg, windowsize, initial_f, maxdisparity, d=2, cutoff=30, ):\n",
     "        self.limg = limg\n",
@@ -271,9 +274,6 @@
     "        # TODO: change hard-code lam\n",
     "        lam = 1\n",
     "\n",
-    "        def IS_VAR(var):\n",
-    "            return var>1 # 0: absent 1: alpha\n",
-    "\n",
     "        a1 = self.varsA[p1]\n",
     "        a2 = self.varsA[p2]\n",
     "        o1 = self.vars0[p1]\n",
@@ -322,7 +322,31 @@
     "            V = self.smoothness_value(asn1, asn2, lam)\n",
     "            self.energy.add_term1(o2, V, 0)\n",
     "            \n",
-    "        return\n"
+    "        return\n",
+    "\n",
+    "\n",
+    "    def build_uniqueness(self, p, alpha):\n",
+    "        # Build edges in graph enforcing uniqueness at pixels p and p+d:\n",
+    "        # - prevent (p, p+d) and (p, p+a) from being both active.\n",
+    "        # - prevent (p, p+d) and (p+d-alpha, p+d) from being both active.\n",
+    "        o = self.vars0[p]\n",
+    "\n",
+    "        if not IS_VAR(o):\n",
+    "            return\n",
+    "        \n",
+    "        # enforce unique image of p\n",
+    "        a = self.varsA[p]\n",
+    "        if a != VAR_ABSENT:\n",
+    "            self.energy.forbid01(o, a)\n",
+    "\n",
+    "        # enforce unique antecedent of p+d\n",
+    "        d = self.d_left[p]\n",
+    "        # d cannot be OCCLUDED\n",
+    "        p[1] = p[1] + d - alpha\n",
+    "        if 0 <= p[1] <= self.limg.shape[1]:\n",
+    "            a = self.varsA[p]\n",
+    "            # a cannot be active\n",
+    "            self.energy.forbid01(o, a)\n"
    ]
   },
   {
