implemented solver for single alpha value

--- a/main.ipynb
+++ b/main.ipynb
@@ -230,7 +230,7 @@
     "        '''\n",
     "        d = self.d_left[p]\n",
     "        # TODO: change hard-code K\n",
-    "        K = 0\n",
+    "        K = 1000\n",
     "        if d == alpha:\n",
     "            # a in A_alpha and is active remains active\n",
     "            asn = (p, (p[0], p[1]+d))\n",
@@ -272,7 +272,7 @@
     "        \n",
     "    def build_smoothness(self, p1, p2, alpha):\n",
     "        # TODO: change hard-code lam\n",
-    "        lam = 1\n",
+    "        lam = 200\n",
     "\n",
     "        a1 = self.varsA[p1]\n",
     "        a2 = self.varsA[p2]\n",
@@ -346,7 +346,47 @@
     "        if 0 <= p[1] <= self.limg.shape[1]:\n",
     "            a = self.varsA[p]\n",
     "            # a cannot be active\n",
-    "            self.energy.forbid01(o, a)\n"
+    "            self.energy.forbid01(o, a)\n",
+    "\n",
+    "    def neighbors(self, p):\n",
+    "        p_1, p_2 = p\n",
+    "        neighbors = [(p_1+1, p_2), (p_1, p_2+1), (p_1+1, p_2+1)]\n",
+    "        return neighbors\n",
+    "    \n",
+    "    def build_energy(self, alpha):\n",
+    "        self.energy = Energy()\n",
+    "        for i in range(self.limg.shape[0]):\n",
+    "            for j in range(self.limg.shape[1]):\n",
+    "                p =(i,j)\n",
+    "                self.build_node_with_data_occulsion(p, alpha)\n",
+    "                self.build_uniqueness(p, alpha)\n",
+    "        for i in range(self.limg.shape[0]-1):\n",
+    "            for j in range(self.limg.shape[1]-1):\n",
+    "                p1 =(i,j)\n",
+    "                for p2 in self.neighbors(p):\n",
+    "                    self.build_smoothness(p1, p2, alpha)\n",
+    "    \n",
+    "    def minimize_energy(self):\n",
+    "        self.energy.minimize()\n",
+    "\n",
+    "    def recover_configuration(self, alpha):\n",
+    "        partition = self.energy.mincut.partition\n",
+    "        for i in range(self.limg.shape[0]):\n",
+    "            for j in range(self.limg.shape[1]):\n",
+    "                p = (i,j)\n",
+    "                alpha_node_id = self.varsA[p]\n",
+    "                d_node_id = self.vars0[p]\n",
+    "                if IS_VAR(d_node_id) and d_node_id in partition[1]:\n",
+    "                    self.d_left[p] = OCCLUDED\n",
+    "                if IS_VAR(alpha_node_id) and alpha_node_id in partition[1]:\n",
+    "                    self.d_left[p] = alpha\n",
+    "        for i in range(self.limg.shape[0]):\n",
+    "            for j in range(self.limg.shape[1]):\n",
+    "                dl = self.d_left[p]\n",
+    "                if(dl != OCCLUDED):\n",
+    "                    self.d_right[p[0], p[0]+dl] = -dl\n",
+    "\n",
+    "    \n"
    ]
   },
   {
@@ -481,7 +521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.9"
   },
   "orig_nbformat": 4
  },
