--- a/main.ipynb
+++ b/main.ipynb
@@ -415,6 +415,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TODO\n",
+    "\n",
+    "- alpha exapansion algorithm\n",
+    "\n",
+    "- parameter tuning\n",
+    "    K and $\\lambda$\n",
+    "\n",
+    "- figure out initial configuration\n",
+    "\n",
+    "- multi processing\n",
+    "https://medium.com/python-experiments/parallelising-in-python-mutithreading-and-mutiprocessing-with-practical-templates-c81d593c1c49\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 81,
    "metadata": {},
