implemented param tuning; fixed initial config

--- a/main.ipynb
+++ b/main.ipynb
@@ -39,7 +39,6 @@
     "        self.edges = []\n",
     "        self.capacity = []\n",
     "\n",
-    "    # TODO: function to recover vertex separation from graph cut\n",
     "    \n",
     "    # Add a new binary variable as a node\n",
     "    def add_node(self, E0=0, E1=0)->int:\n",
@@ -179,16 +178,24 @@
     "    return var>1 # 0: absent 1: alpha\n",
     "\n",
     "class Solver:\n",
-    "    def __init__(self, limg, rimg, windowsize, initial_f, maxdisparity, d=2, cutoff=30, ):\n",
+    "    def __init__(self, limg, rimg, windowsize, maxdisparity, initial_f=None,  d=2, cutoff=30):\n",
     "        self.limg = limg\n",
     "        self.rimg = rimg\n",
     "        # windowsize * 2 + 1 = full window length\n",
     "        self.windowsize = windowsize #windowsize in data term\n",
-    "        # configuration\n",
-    "        # f is 3d array\n",
-    "        # f = [p_row, p_col, p_disparity]\n",
-    "        self.d_left = initial_f[0]\n",
-    "        self.d_right = initial_f[1]\n",
+    "        # configuration (represented by disparity)\n",
+    "        if initial_f is not None:\n",
+    "            self.d_left = initial_f \n",
+    "            self.d_right = np.zeros_like(initial_f)\n",
+    "            for i in range(self.limg.shape[0]):\n",
+    "                for j in range(self.limg.shape[1]):\n",
+    "                    p = (i,j)\n",
+    "                    dl = self.d_left[p]\n",
+    "                    if(dl != OCCLUDED):\n",
+    "                        self.d_right[p[0], p[0]+dl] = -dl\n",
+    "        else:\n",
+    "            self.d_left = np.zeros(limg)\n",
+    "            self.d_right = np.zeros(rimg)\n",
     "        # disparity matching window along the rectified image rows\n",
     "        self.maxdisparity = maxdisparity\n",
     "        # Graph representation of energy function\n",
@@ -202,6 +209,8 @@
     "\n",
     "        self.limg_padded = np.pad(self.limg, windowsize, mode=\"reflect\").astype(int)\n",
     "        self.rimg_padded = np.pad(self.rimg, windowsize, mode=\"reflect\").astype(int)\n",
+    "\n",
+    "        self.tune_K()\n",
     "\n",
     "    def disparity(self, asn):\n",
     "        # assignment a - (p, q)\n",
@@ -231,12 +240,10 @@
     "        alpha: alpha-expansion disparity value\n",
     "        '''\n",
     "        d = self.d_left[p]\n",
-    "        # TODO: change hard-code K\n",
-    "        K = 1000\n",
     "        if d == alpha:\n",
     "            # a in A_alpha and is active remains active\n",
     "            asn = (p, (p[0], p[1]+d))\n",
-    "            Dp = self.data_occlusion_value(asn, K)\n",
+    "            Dp = self.data_occlusion_value(asn, self.K)\n",
     "            self.energy.add_constant(Dp)\n",
     "            self.varsA[p] = VAR_ALPHA\n",
     "            self.vars0[p] = VAR_ALPHA\n",
@@ -245,7 +252,7 @@
     "            if p[1]+alpha<self.limg.shape[1]:\n",
     "                # p has inactive assignnent with disparity = alpha\n",
     "                asn = (p, (p[0], p[1]+alpha))\n",
-    "                Dp = self.data_occlusion_value(asn, K)\n",
+    "                Dp = self.data_occlusion_value(asn, self.K)\n",
     "                a = self.energy.add_node(0, Dp)\n",
     "                self.varsA[p] = a\n",
     "            else:\n",
@@ -255,7 +262,7 @@
     "            if d != OCCLUDED:\n",
     "                # p has active assignemnt with disparity not= alpha\n",
     "                asn = (p, (p[0], p[1]+d))\n",
-    "                Dp = self.data_occlusion_value(asn, K)\n",
+    "                Dp = self.data_occlusion_value(asn, self.K)\n",
     "                o = self.energy.add_node(Dp, 0)\n",
     "                self.vars0[p] = o\n",
     "            else:\n",
@@ -274,7 +281,6 @@
     "        \n",
     "    def build_smoothness(self, p1, p2, alpha):\n",
     "        # TODO: change hard-code lam\n",
-    "        lam = 200\n",
     "\n",
     "        a1 = self.varsA[p1]\n",
     "        a2 = self.varsA[p2]\n",
@@ -295,7 +301,7 @@
     "            # at least one of p1 and p2 has inactive assignment with disp=alpha\n",
     "            asn1 = (p1, (p1[0], p1[1]+alpha))\n",
     "            asn2 = (p2, (p2[0], p2[1]+alpha))\n",
-    "            V = self.smoothness_value(asn1, asn2, lam)\n",
+    "            V = self.smoothness_value(asn1, asn2, self.lam)\n",
     "            if(a1!=VAR_ALPHA and a2!=VAR_ALPHA):\n",
     "                self.energy.add_term2(a1,a2,0,V,V,0)\n",
     "            elif(a1!=VAR_ALPHA and a2==VAR_ALPHA):\n",
@@ -307,21 +313,21 @@
     "        if(d1==d2 and IS_VAR(o1) and IS_VAR(o2)):\n",
     "            asn1 = (p1, (p1[0], p1[1]+d1))\n",
     "            asn2 = (p2, (p2[0], p2[1]+d2))\n",
-    "            V = self.smoothness_value(asn1, asn2, lam)\n",
+    "            V = self.smoothness_value(asn1, asn2, self.lam)\n",
     "            self.energy.add_term2(o1, o2, 0, V, V, 0)\n",
     "\n",
     "        #disp= active-assignment_of(p1)!=active-assignment_of(p2)\n",
     "        if(d1!=d2 and IS_VAR(o1) and p2[1]+d1<self.limg.shape[1]):\n",
     "            asn1 = (p1, (p1[0], p1[1]+d1))\n",
     "            asn2 = (p2, (p2[0], p2[1]+d1))\n",
-    "            V = self.smoothness_value(asn1, asn2, lam)\n",
+    "            V = self.smoothness_value(asn1, asn2, self.lam)\n",
     "            self.energy.add_term1(o1, V, 0)\n",
     "        \n",
     "        #disp= active-assignment_of(p2)!=active-assignment_of(p1)\n",
     "        if(d2!=d1 and IS_VAR(o2) and p1[1]+d2<self.limg.shape[1]):\n",
     "            asn1 = (p1, (p1[0], p1[1]+d2))\n",
     "            asn2 = (p2, (p2[0], p2[1]+d2))\n",
-    "            V = self.smoothness_value(asn1, asn2, lam)\n",
+    "            V = self.smoothness_value(asn1, asn2, self.lam)\n",
     "            self.energy.add_term1(o2, V, 0)\n",
     "            \n",
     "        return\n",
@@ -384,6 +390,7 @@
     "                    self.d_left[p] = alpha\n",
     "        for i in range(self.limg.shape[0]):\n",
     "            for j in range(self.limg.shape[1]):\n",
+    "                p = (i,j)\n",
     "                dl = self.d_left[p]\n",
     "                if(dl != OCCLUDED):\n",
     "                    self.d_right[p[0], p[0]+dl] = -dl\n",
@@ -404,6 +411,21 @@
     "            self.recover_configuration(alpha)\n",
     "            return True\n",
     "        return False\n",
+    "\n",
+    "    def tune_K(self):\n",
+    "        lower_one_fourth = int(self.maxdisparity/4)\n",
+    "        lower_one_fourth_sum = 0\n",
+    "        for i in range(self.limg.shape[0]):\n",
+    "            for j in range(self.limg.shape[1]):\n",
+    "                d_array = []\n",
+    "                for d in range(self.maxdisparity):\n",
+    "                    asn = ((i,j),(i,j+d))\n",
+    "                    d_array.append(self.data_occlusion_value(asn, 0))\n",
+    "                d_array.sort()\n",
+    "                lower_one_fourth_sum += np.sum(d_array[0:lower_one_fourth])\n",
+    "        self.K = lower_one_fourth_sum/(self.limg.shape[0]*self.limg.shape[1]*lower_one_fourth)\n",
+    "        self.lam = self.K/5\n",
+    "                \n",
     "\n",
     "    def run(self):\n",
     "        # Alpha-expansion move\n",
@@ -577,7 +599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.9"
   },
   "orig_nbformat": 4
  },
