--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "-5.0"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,8 +179,8 @@
     "\n",
     "class Solver:\n",
     "    def __init__(self, limg, rimg, windowsize, maxdisparity, initial_f=None,  d=2, cutoff=30):\n",
-    "        self.limg = limg\n",
-    "        self.rimg = rimg\n",
+    "        self.limg = limg.astype(np.float64)\n",
+    "        self.rimg = rimg.astype(np.float64)\n",
     "        # windowsize * 2 + 1 = full window length\n",
     "        self.windowsize = windowsize #windowsize in data term\n",
     "        # configuration (represented by disparity)\n",
@@ -207,10 +207,12 @@
     "        self.varsA = np.zeros_like(self.limg)\n",
     "        self.vars0 = np.zeros_like(self.limg)\n",
     "\n",
-    "        self.limg_padded = np.pad(self.limg, windowsize, mode=\"reflect\").astype(int)\n",
-    "        self.rimg_padded = np.pad(self.rimg, windowsize, mode=\"reflect\").astype(int)\n",
+    "        self.limg_padded = np.pad(self.limg, windowsize, mode=\"reflect\")\n",
+    "        self.rimg_padded = np.pad(self.rimg, windowsize, mode=\"reflect\")\n",
     "\n",
-    "        self.tune_K()\n",
+    "        self.K = 4370.99560791287\n",
+    "        self.lam = 874.199121582574\n",
+    "        # self.tune_K()\n",
     "\n",
     "    def disparity(self, asn):\n",
     "        # assignment a - (p, q)\n",
@@ -221,12 +223,15 @@
     "        return self.f[a[0][0], a[0][1], a[0][1] - a[1][1]]\n",
     "\n",
     "    #data + occlusion\n",
-    "    def data_occlusion_value(self, asn, K):\n",
+    "    def data_occlusion_value(self, asn, K, debug=False):\n",
     "        p,q = asn\n",
     "        lwindow = self.limg_padded[ p[0]:p[0]+2*self.windowsize+1,\n",
     "                                    p[1]:p[1]+2*self.windowsize+1]\n",
     "        rwindow = self.rimg_padded[ q[0]:q[0]+2*self.windowsize+1,\n",
     "                                    q[1]:q[1]+2*self.windowsize+1]\n",
+    "        if debug:\n",
+    "            print('lwindow',lwindow)\n",
+    "            print('rwindow',rwindow)\n",
     "        abs_difference = np.abs(lwindow-rwindow)\n",
     "        abs_difference_trimmed = abs_difference * (abs_difference<=30) + 30 * (abs_difference>30)\n",
     "        E_data = np.sum(abs_difference_trimmed ** self.d)\n",
@@ -279,8 +284,6 @@
     "            return lam\n",
     "        \n",
     "    def build_smoothness(self, p1, p2, alpha):\n",
-    "        # TODO: change hard-code lam\n",
-    "\n",
     "        a1 = self.varsA[p1]\n",
     "        a2 = self.varsA[p2]\n",
     "        o1 = self.vars0[p1]\n",
@@ -367,11 +370,30 @@
     "                p =(i,j)\n",
     "                self.build_node_with_data_occlusion(p, alpha)\n",
     "                self.build_uniqueness(p, alpha)\n",
+    "\n",
+    "        # all neighbors in bound\n",
     "        for i in range(self.limg.shape[0]-1):\n",
     "            for j in range(self.limg.shape[1]-1):\n",
     "                p1 =(i,j)\n",
-    "                for p2 in self.neighbors(p):\n",
+    "                for p2 in self.neighbors(p1):\n",
     "                    self.build_smoothness(p1, p2, alpha)\n",
+    "\n",
+    "        # right neighbors out of bound\n",
+    "        for i in range(self.limg.shape[0]-1):\n",
+    "            # right-most column\n",
+    "            j = self.limg.shape[1] - 1\n",
+    "            p1 = (i, j)\n",
+    "            p2 = (i-1, j)\n",
+    "            self.build_smoothness(p1, p2, alpha)\n",
+    "\n",
+    "        # down neighbors out of bound\n",
+    "        for j in range(self.limg.shape[1]-1):\n",
+    "            # bottom column\n",
+    "            i = self.limg.shape[0] - 1\n",
+    "            p1 = (i, j)\n",
+    "            p2 = (i, j + 1)\n",
+    "            self.build_smoothness(p1, p2, alpha)\n",
+    "\n",
     "    \n",
     "    def minimize_energy(self):\n",
     "        return self.energy.minimize()\n",
@@ -445,12 +467,66 @@
     "                if self.expansion_move(alpha):\n",
     "                    done = np.full((self.maxdisparity), 0)\n",
     "                done[alpha] = 1\n",
-    "\n"
+    "\n",
+    "    def ComputeEnergy(self):\n",
+    "        def add_smoothness(p1, p2):\n",
+    "            smoothness_term = 0\n",
+    "\n",
+    "            d1 = self.d_left[p1]\n",
+    "            d2 = self.d_left[p2]\n",
+    "            if d1 == d2:\n",
+    "                return\n",
+    "            if d1 != OCCLUDED and \\\n",
+    "                p2[1] + d1 <= self.limg.shape[1]:\n",
+    "                smoothness_term += self.smoothness_value((p1, (p1[0], p1[1] + d1)), (p2, (p2[0], p2[1] + d1)), self.lam)\n",
+    "            \n",
+    "            if d2 != OCCLUDED and \\\n",
+    "                p1[1] + d2 <= self.limg.shape[1]:\n",
+    "                smoothness_term += self.smoothness_value((p1, (p1[0], p1[1] + d2)), (p2, (p2[0], p2[1] + d2)), self.lam)\n",
+    "            \n",
+    "            print(p1, p2)\n",
+    "            print(smoothness_term)\n",
+    "            return smoothness_term\n",
+    "        \n",
+    "        # Compute current minimized energy\n",
+    "        # only use for debugging\n",
+    "        E = 0\n",
+    "        for i in range(self.limg.shape[0]):\n",
+    "            for j in range(self.limg.shape[1]):\n",
+    "                p1 = (i, j)\n",
+    "                d1 = self.d_left[p1]\n",
+    "                \n",
+    "                if d1 != OCCLUDED:\n",
+    "                    E += self.data_occlusion_value((p1, (i, j + d1)), self.K)\n",
+    "\n",
+    "        # all neighbors in bound\n",
+    "        for i in range(self.limg.shape[0]-1):\n",
+    "            for j in range(self.limg.shape[1]-1):\n",
+    "                p1 =(i,j)\n",
+    "                for p2 in self.neighbors(p1):\n",
+    "                    E += add_smoothness(p1, p2)\n",
+    "\n",
+    "\n",
+    "        # right neighbors out of bound\n",
+    "        for i in range(self.limg.shape[0]-1):\n",
+    "            # right-most column\n",
+    "            j = self.limg.shape[1] - 1\n",
+    "            p1 = (i, j)\n",
+    "            p2 = (i-1, j)\n",
+    "            E += add_smoothness(p1, p2)\n",
+    "\n",
+    "        # down neighbors out of bound\n",
+    "        for j in range(self.limg.shape[1]-1):\n",
+    "            # bottom column\n",
+    "            i = self.limg.shape[0] - 1\n",
+    "            p1 = (i, j)\n",
+    "            p2 = (i, j + 1)\n",
+    "            E += add_smoothness(p1, p2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +626,7 @@
        "4370.99560791287"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,10 +637,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "874.199121582574"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "testSolver.lam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'float' and 'NoneType'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_21884/1862402694.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtestSolver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mComputeEnergy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_21884/3722500262.py\u001b[0m in \u001b[0;36mComputeEnergy\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    334\u001b[0m                 \u001b[0mp1\u001b[0m \u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    335\u001b[0m                 \u001b[1;32mfor\u001b[0m \u001b[0mp2\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mneighbors\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mp1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 336\u001b[1;33m                     \u001b[0mE\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0madd_smoothness\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mp1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mp2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    337\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    338\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'float' and 'NoneType'"
+     ]
+    }
+   ],
+   "source": [
+    "testSolver.ComputeEnergy()"
+   ]
   }
  ],
  "metadata": {
